vlib/v/parser/tests/select_else_2.vv
import time

fn f3_bad(ch1 chan int) {
	a := 5
	select {
		b := <-ch1 {
			println(b)
		}
		> 30 * time.millisecond {
			println('bad')
		}
		else {
			println("shouldn't get here")
		}
	}
}

fn main() {}
